--- a/assets/style.css
+++ b/assets/style.css
@@ -5,31 +5,76 @@ body {
 h1 {
   margin-top: 0;
   font-family: "Sacramento", cursive;
-  font-size: 5.62rem;
+  font-size: 6rem;
 }
 h2 {
-  color: #b36969;
+  color: #b55e5e;
+  font-family: "Bitter", serif;
+  font-size: 3.5rem;
 }
 h3 {
-  color: #b36969;
-}
-p {
+  color: #b55e5e;
   font-family: "Montserrat Alternates", sans-serif;
-  /* line-height: 2; */
-  font-size: 2rem;
+  font-size: 1.6rem;
 }
 
+hr {
+  border-style: dotted;
+  border-bottom: none;
+  border-width: 8px;
+  width: 5%;
+  border-color: gray;
+}
+a{
+  margin: auto 50;
+  font-size: 20px;
+  color: #b55e5e;
+  padding-top: 2rem;
+}
+a:hover{
+color: #f7f1f1;
+}
+.footer-para{
+  color: #f7f1f1;
+  padding-top: 2rem; 
+}
+.profile-para {
+  font-family: "Roboto", sans-serif;
+  line-height: 2;
+  font-size: 1.5rem;
+  width: 40%;
+  margin: 0 auto;
+}
+.skill-para {
+  font-family: "Roboto", sans-serif;
+
+  font-size: 1.5rem;
+}
+.website-para {
+  font-family: "Montserrat Alternates", sans-serif;
+  font-size: 2rem;
+}
+.contact-me-para {
+  font-family: "Roboto", sans-serif;
+  padding-bottom: 40px;
+  font-size: 1.5rem;
+}
+.contact-me-head {
+  padding-top: 40px;
+}
 .top-container {
   background-color: rgb(219, 175, 175);
-  color: #b36969;
-  padding-top: 70px;
+  color: #b55e5e;
+  padding-top: 120px;
 }
 
 .middle-container {
   padding-top: 20px;
 }
 .bottom-container {
-  padding-top: 20px;
+  padding: 50px;
+  background-color: rgb(219, 175, 175);
+  font-family: "Montserrat Alternates", sans-serif;
 }
 .main-container {
   text-align: center;
@@ -37,12 +82,17 @@ p {
 
 .bottom-cloud {
   position: absolute;
-  left: 30rem;
+  left: 23rem;
+  width: 15%;
 }
 .top-cloud {
   position: absolute;
-  right: 25%;
-  top: 38px;
+  right: 19%;
+  top: 42px;
+  width: 15%;
+}
+.mountain {
+  width: 45%;
 }
 .profile-img {
   height: 300px;
@@ -55,13 +105,49 @@ p {
   border-radius: 50%;
 }
 .chillies {
-    width: 25%;
-    float: right;
-    margin-left: 30px;
+  width: 25%;
+  float: right;
+  margin-left: 30px;
 }
 .skill-row {
   width: 50%;
   margin: 100px auto;
   text-align: left;
   line-height: 2;
+}
+.btn {
+  background: #da5a5a;
+  background-image: -webkit-linear-gradient(top, #da5a5a, #b55e5e);
+  background-image: -moz-linear-gradient(top, #da5a5a, #b55e5e);
+  background-image: -ms-linear-gradient(top, #da5a5a, #b55e5e);
+  background-image: -o-linear-gradient(top, #da5a5a, #b55e5e);
+  background-image: linear-gradient(to bottom, #da5a5a, #b55e5e);
+  -webkit-border-radius: 28;
+  -moz-border-radius: 28;
+  border-radius: 8px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  background: #f8a9a9;
+  background-image: -webkit-linear-gradient(top, #f8a9a9, #da5a5a);
+  background-image: -moz-linear-gradient(top, #f8a9a9, #da5a5a);
+  background-image: -ms-linear-gradient(top, #f8a9a9, #da5a5a);
+  background-image: -o-linear-gradient(top, #f8a9a9, #da5a5a);
+  background-image: linear-gradient(to bottom, #f8a9a9, #da5a5a);
+
+  text-decoration: none;
+}
+.profile {
+  padding: 5rem;
+}
+.skills {
+  padding: 5rem;
+}
+.contact-me {
+  padding: 5rem;
 }
