profile width removed

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ color: #f7f1f1;
   font-family: "Roboto", sans-serif;
   line-height: 2;
   font-size: 1.5rem;
-  width: 40%;
+  /* width: 40%; */
   margin: 0 auto;
 }
 .skill-para {
